[package]
name = "rad_fw"
version = "0.1.0"
authors = ["nullptr"]
edition = "2018"

[dependencies]
bincode = "1"
byteorder = "1"
env_logger = "0"
hex = "0"
lazy_static = "1"
libc = "0"
log = { version = "0", features = ["max_level_debug", "release_max_level_info"] }
#log = { version = "0", features = ["max_level_debug"] }
rand = "0"
reed-solomon-erasure = { version = "4", features = ["simd-accel"] }
ring = "0"
seahash = "4"
serde = { version = "1", features = ["derive"] }
solana_rbpf = "0"
thiserror = "1"

rad_message = { path = "../rad_message" }
