[package]
name = "rad_message"
version = "0.1.0"
authors = ["nullptr"]
edition = "2018"

[dependencies]
chrono = "0"
jsonwebtoken = "7"
lazy_static = "1"
nyx-space = "0"
reqwest = { version = "0", default-features = false, features = ["rustls-tls", "blocking"] }
ring = "0"
serde = { version = "1", features = ["derive"] }
structopt = "0"
